fix: add th position + scrollbar track margin top

--- a/css/common/grid.css
+++ b/css/common/grid.css
@@ -1,11 +1,10 @@
 .grid {
-  position: relative;
-  width: 400px;
-  height: 400px;
+  /* position: relative; */
+  width: 100%;
+  height: 100%;
   /* background-color: blueviolet; */
-  /* overflow-x: auto;
-  overflow-y: hidden; */
-  /* overflow: hidden; */
+  overflow: auto;
+
 }
 
 table {
@@ -35,10 +34,6 @@ table {
   }
 
 /*  */
-tbody {
-  width: fit-content;
-  table-layout: fixed;
-}
 /* 
 tbody {
   display: block;
@@ -51,7 +46,9 @@ thead, tbody tr {
   table-layout: fixed;
   width: 100%;
 } */
-/* thead {
+
+/* 
+thead {
   position: sticky;
   position: -webkit-sticky;
   position: -webkit-sticky;
@@ -66,15 +63,19 @@ thead, tbody tr {
   
 } */
 
-
+th {
+  position: sticky;
+  top: 0;
+  background-color: #ffffff;
+}
 
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-track {
-  /* margin-top: 48px; */
+  margin-top: 47px;
   background: #BBBBBB; 
 }
  
